# oncotriage

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: assessments.py  contact_requests.py  health.py
backend/app/models/: __init__.py  advice.py  assessment.py  event_log.py  evidence.py  symptom_observation.py  user.py
backend/app/rules/: loader.py  seed_dictionary.py
backend/app/schemas/: assessment.py
backend/app/services/: advice_renderer.py  completeness_checker.py  consent_guard.py  event_emitter.py  llm_client.py  llm_extractor.py  orchestrator.py  rule_engine.py
backend/scripts/: init_db.sh
backend/tests/: SMOKE.md  conftest.py  smoke_cases.yaml  test_assessments_api.py  test_completeness_checker.py  test_dictionary_rules_alignment.py  test_extract_api.py  test_get_assessment_api.py  test_get_history_api.py  test_llm_client.py  test_llm_extractor.py  test_orchestrator.py  test_rule_engine.py  test_rules_loader.py  test_smoke_corpus.py
docs/: CLOSED_LOOP_EXAMPLE.md  DESIGN.md  LESSONS_LEARNED.md  MVP.md  MVP_PLAN.md  RETROSPECTIVE.md  UX_DESIGN.md
docs/api/: openapi.yaml
docs/data_model/: consent.py  schema.sql
docs/rules/: rules.yaml
docs/tasks/: M3_rule_engine.md  M5_llm_extractor.md  M6_orchestrator.md  M7_post_assessments.md  M8_get_assessment.md  MVP_plus_1_backend.md  MVP_plus_2_input_onboarding.md  MVP_plus_3_confirm_page.md  README.md  (+2 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json
(+13 files in other folders)
